30-apps/102-jupyterhub-prepull.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: pp-lab0-hub
  namespace: jupyterhub
spec:
  selector:
    matchLabels:
      app: pp-lab0-hub
  template:
    metadata:
      labels:
        app: pp-lab0-hub
    spec:
      nodeSelector:
        m0net/run.jupyterhub: "true"
      containers:
        - name: pp-lab0-hub
          image: registry.access.redhat.com/ubi10/ubi:latest
          command: ["sleep", "infinity"]
          imagePullPolicy: Always
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: pp-lab0
  namespace: jupyterhub
spec:
  selector:
    matchLabels:
      app: pp-lab0
  template:
    metadata:
      labels:
        app: pp-lab0
    spec:
      nodeSelector:
        m0net/run.jupyterlab: "true"
      containers:
        - name: pp-lab0
          image: registry.access.redhat.com/ubi10/ubi:latest
          command: ["sleep", "infinity"]
          imagePullPolicy: Always
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: pp-dockerstacks
  namespace: jupyterhub
spec:
  selector:
    matchLabels:
      app: pp-dockerstacks
  template:
    metadata:
      labels:
        app: pp-dockerstacks
    spec:
      nodeSelector:
        m0net/run.jupyterlab: "true"
      containers:
        - name: pp-dockerstacks
          image: registry.access.redhat.com/ubi10/ubi:latest
          command: ["sleep", "infinity"]
          imagePullPolicy: Always
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: pp-lab0-cuda
  namespace: jupyterhub
spec:
  selector:
    matchLabels:
      app: pp-lab0-cuda
  template:
    metadata:
      labels:
        app: pp-lab0-cuda
    spec:
      nodeSelector:
        m0net/run.jupyterlab: "true"
        nvidia.com/gpu.present: "true"
      containers:
        - name: pp-lab0-cuda
          image: registry.access.redhat.com/ubi10/ubi:latest
          command: ["sleep", "infinity"]
          imagePullPolicy: Always
---
