30-apps/201-grbts-prepull.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: pp-grbts
  namespace: grbts
spec:
  selector:
    matchLabels:
      app: pp-grbts
  template:
    metadata:
      labels:
        app: pp-grbts
    spec:
      nodeSelector:
        m0net/run.grbts: "true"
      containers:
        - name: pp-grbts
          image: registry.access.redhat.com/ubi10/ubi:latest
          command: ["sleep", "infinity"]
          imagePullPolicy: Always
---
