30-apps/610-rbackup-rec4cam.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rbackup-rec4cam
  namespace: rbackup
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rbackup-rec4cam
  template:
    metadata:
      labels: 
        app: rbackup-rec4cam
    spec:
      nodeSelector:
        m0net/run.rec4cam: "true"
      volumes:
        - name: memdir
          emptyDir:
            medium: Memory
            sizeLimit: 4Gi
        - name: script
          configMap:
            name: script
        - name: rbackup-config
          secret:
            secretName: config
      containers:
      - name: rbackup-rec4cam
        image: ghcr.io/rlinfati/lab0-container:rbackup
        volumeMounts:
            - name: memdir
              mountPath: /mnt/emptyDir
            - name: script
              mountPath: /run/script
            - name: rbackup-config
              mountPath: /run/rbackup-config/
              readOnly: true
        command:
          - /bin/sh
          - -c
          - |
            exec sh /run/script/run.sh
---
