30-apps/801-vlmcsd-prepull.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: pp-vlmcsd
  namespace: vlmcsd
spec:
  selector:
    matchLabels:
      app: pp-vlmcsd
  template:
    metadata:
      labels:
        app: pp-vlmcsd
    spec:
      nodeSelector:
        m0net/run.vlmcsd: "true"
      containers:
        - name: pp-vlmcsd
          image: registry.access.redhat.com/ubi10/ubi:latest
          command: ["sleep", "infinity"]
          imagePullPolicy: Always
---
