30-apps/901-strongswan-prepull.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: pp-strongswan
  namespace: strongswan
spec:
  selector:
    matchLabels:
      app: pp-strongswan
  template:
    metadata:
      labels:
        app: pp-strongswan
    spec:
      nodeSelector:
        m0net/run.strongswan: "true"
      containers:
        - name: pp-strongswan
          image: registry.access.redhat.com/ubi10/ubi:latest
          command: ["sleep", "infinity"]
          imagePullPolicy: Always
---
