30-apps/100-jupyterhub.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jupyterhub
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
---
apiVersion: v1
kind: Service
metadata:
  name: www
  namespace: jupyterhub
spec:
  selector:
    app: jhub
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: jupyterhub
spec:
  type: ClusterIP
  selector:
    app: jhub
  ports:
  - protocol: TCP
    port: 8001
    targetPort: 8001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jupyterhub
  namespace: jupyterhub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jhub
  template:
    metadata:
      labels:
        app: jhub
    spec:
      nodeSelector:
        m0net/run.jupyterhub: "true"
      serviceAccountName: jhub
      containers:
      - name: jhub
        image: ghcr.io/rlinfati/lab0-container:jupyter-hub
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            memory: 512Mi
        volumeMounts:
        - name: jhub-oauth
          mountPath: /etc/jupyterhub/secrets
        - name: jhub-config
          mountPath: /etc/jupyterhub/jupyterhub_config.py
          subPath: jupyterhub_config.py
        - name: jhub-database
          mountPath: /etc/jupyterhub/database
        ports:
        - containerPort: 8000
        - containerPort: 8001
      volumes:
      - name: jhub-oauth
        secret:
          secretName: jhub.oauth
      - name: jhub-config
        configMap:
          name: jhub.config
      - name: jhub-database
        persistentVolumeClaim:
          claimName: database
---
