30-apps/200-grbts.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grbts
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
---
apiVersion: v1
kind: Service
metadata:
  name: grbts
  namespace: grbts
spec:
  type: ClusterIP
  selector:
    app: grbts
  ports:
  - port: 41954
    protocol: TCP
    targetPort: 41954
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grbts
  namespace: grbts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grbts
  template:
    metadata:
      labels:
        app: grbts
    spec:
      nodeSelector:
        m0net/run.grbts: "true"
      hostname: lab0-grb
      hostPID: true
      containers:
      - name: lab0-grb
        image: ghcr.io/rlinfati/lab0-container:grbts
        resources:
          requests:
            cpu: 10m
            memory: 32Mi
          limits:
            memory: 256Mi
        ports:
        - containerPort: 41954
          protocol: TCP
        volumeMounts:
        - name: license
          mountPath: /opt/gurobi/gurobi.lic
          subPath: gurobi.lic
      volumes:
      - name: license
        secret:
          secretName: license
---
