30-apps/800-vlmcsd.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vlmcsd
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
---
apiVersion: v1
kind: Service
metadata:
  name: vlmcsd
  namespace: vlmcsd
spec:
  type: ClusterIP
  selector:
    app: vlmcsd
  ports:
  - port: 1688
    protocol: TCP
    targetPort: 1688
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vlmcsd
  namespace: vlmcsd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vlmcsd
  template:
    metadata:
      labels:
        app: vlmcsd
    spec:
      nodeSelector:
        m0net/run.vlmcsd: "true"
      containers:
      - name: vlmcsd
        image: ghcr.io/rlinfati/lab0-container:vlmcsd
        resources:
          requests:
            cpu: 10m
            memory: 32Mi
          limits:
            memory: 256Mi
        ports:
        - containerPort: 1688
          protocol: TCP
---
