30-apps/900-strongswan.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: strongswan
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
---
apiVersion: v1
kind: Service
metadata:
  name: swan
  namespace: strongswan
spec:
  type: ClusterIP
  selector:
    app: swan
  ports:
  - name: isakmp
    port: 500
    protocol: UDP
    targetPort: 500
  - name: nat-t
    port: 4500
    protocol: UDP
    targetPort: 4500
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: swan
  namespace: strongswan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: swan
  template:
    metadata:
      labels:
        app: swan
    spec:
      nodeSelector:
        m0net/run.strongswan: "true"
      containers:
      - name: swan
        image: ghcr.io/rlinfati/lab0-container:strongswan
        command:
          - /bin/sh
          - -c
          - |
            [...]
        securityContext:
          privileged: true
        resources:
          requests:
            cpu: 10m
            memory: 32Mi
          limits:
            memory: 256Mi
        ports:
        - name: isakmp
          containerPort: 500
          protocol: UDP
          hostPort: 500
        - name: nat-t
          containerPort: 4500
          protocol: UDP
          hostPort: 4500
        volumeMounts:
        - name: nftables
          mountPath: /etc/nftables/nat-masquerade.nft
          subPath: nat-masquerade.nft
        - name: ikev2
          mountPath: /etc/strongswan/swanctl/conf.d/ikev2.conf
          subPath: ikev2.conf
        - name: x509ca
          mountPath: /etc/strongswan/swanctl/x509ca/m0-0ca-2024.crt
          subPath: m0-0ca-2024.crt
        - name: tls
          mountPath: /run/tls
          readOnly: true
      volumes:
      - name: nftables
        configMap:
          name: nftables
      - name: ikev2
        configMap:
          name: ikev2
      - name: x509ca
        configMap:
          name: x509ca
      - name: tls
        secret:
          secretName: tls
---
